[package]
name = "advent"
version = "0.1.0"
authors = ["Matti Astrand <mattiastr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
itertools = "0.8.2"
permutator = "0.3.3"
num = "0.2.0"
derive_more = "0.99.2"
