[package]
name = "advent"
version = "0.1.0"
authors = ["Matti Astrand <mattiastr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["cargo"]}
itertools = "*"
permutator = "*"
num = "*"
derive_more = { version = "*", features = ["from"]}
ncurses = "*"
nom = "5"
rand = "*"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
